modified:   index.html

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 	</header>
 
-	<section>
+	<section class="jumbotron">
 		<div class="container-b">
       <div class="texto-izq">
         <h1>Se uno de nuestros clientes premiun</h1>
