--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img src="assets/images/cat-silhouette.svg"  alt="">
         <h1>Coffee Cats</h1>
       </a>
+      <a href="#"></a>
     </li>
 
     <ul class="navbar-nav">
@@ -54,6 +55,12 @@
           <span class="link-text">Iniciar sesión</span>
         </a>
       </li>
+      <li class="menu-responsive">
+        <a href="#">
+          <img src="assets/images/list.svg" alt="">
+        </a>
+      </li>
+
     </ul>
   </nav>
 
@@ -69,9 +76,9 @@
     </div>
 	</header>
 
-	<section class="jumbotron">
-		<div class="container-b">
-      <div class="texto-izq">
+	<section>
+		<div class="jumbotron">
+      <div class="texto-der">
         <h1>Se uno de nuestros clientes premiun</h1>
         <p>Suscribete para recibir nuestras ultimas noticias, obten descuentos exclusivos y acceso a nuestra guarderia online.</p>
         <div class="boton">
